Closed Bug 1384650 Opened 7 years ago Closed 7 years ago

5,000 instances of "'NS_FAILED(rv)'" emitted from dom/storage/SessionStorageManager.cpp during linux64 debug testing

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla56
Tracking Status
firefox56 --- fixed

People

(Reporter: erahm, Assigned: baku)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

> 5039 WARNING: 'NS_FAILED(rv)', file dom/storage/SessionStorageManager.cpp, line 170

This warning [1] shows up in the following test suites:

>   3681 - test-linux64/debug-web-platform-tests-3 wpt3
>    900 - test-linux64/debug-mochitest-devtools-chrome-2 dt2
>    169 - test-linux64/debug-mochitest-6 6
>    120 - test-linux64/debug-mochitest-browser-chrome-1 bc1
>     70 - test-linux64/debug-mochitest-devtools-chrome-4 dt4
>     36 - test-linux64/debug-mochitest-7 7
>     24 - test-linux64/debug-web-platform-tests-7 wpt7
>     10 - test-linux64/debug-mochitest-browser-chrome-e10s-16 bc16
>      8 - test-linux64/debug-mochitest-chrome-1 c1
>      6 - test-linux64/debug-mochitest-5 5
>      6 - test-linux64/debug-web-platform-tests-reftests-5 Wr5
>      4 - test-linux64/debug-mochitest-2 2
>      3 - test-linux64/debug-web-platform-tests-4 wpt4
>      2 - test-linux64/debug-mochitest-10 10

It shows up in 81 tests. A few of the most prevalent:

>   3318 -        /webstorage/storage_setitem.html
>     95 -        devtools/client/storage/test/browser_storage_sessionstorage_edit.js
>     88 -        devtools/client/storage/test/browser_storage_delete_usercontextid.js
>     67 -        devtools/client/storage/test/browser_storage_sessionstorage_add.js
>     50 -        devtools/client/storage/test/browser_storage_dynamic_updates_sessionStorage.js
>     46 -        dom/tests/mochitest/sessionstorage/test_sessionStorageBaseSessionOnly.html
>     43 -        dom/tests/mochitest/sessionstorage/test_sessionStorageClone.html
>     41 -        devtools/client/storage/test/browser_storage_basic_with_fragment.js
>     41 -        devtools/client/storage/test/browser_storage_cache_delete.js
>     41 -        devtools/client/storage/test/browser_storage_cookies_delete_all.js

[1] https://hg.mozilla.org/mozilla-central/annotate/e8400551c2e3/dom/storage/SessionStorageManager.cpp#l170
baku this looks like the remainder from bug 1366101, comment 2. Can you take a look?
Flags: needinfo?(amarchesini)
See Also: → 1366101
Attached patch warning.patchSplinter Review
Yes, it's a similar warning.
Assignee: nobody → amarchesini
Flags: needinfo?(amarchesini)
Attachment #8890470 - Flags: review?(erahm)
Comment on attachment 8890470 [details] [diff] [review]
warning.patch

Review of attachment 8890470 [details] [diff] [review]:
-----------------------------------------------------------------

Thanks!
Attachment #8890470 - Flags: review?(erahm) → review+
Pushed by amarchesini@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/6efdde2f7dd5
Remove extra warnings in SessionStorageManage, r=erahm
https://hg.mozilla.org/mozilla-central/rev/6efdde2f7dd5
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla56
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.