Bug 1384650 - Remove extra warnings in SessionStorageManage, r=erahm